--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "types-arpeggio"
-version = "0.0.1-dev"
+version = "0.0.1a0"
 description = ""
 authors = ["ijknabla <ijknabla@gmail.com>"]
 readme = "README.md"
