Revert "Bump to 0.0.1a0"
This reverts commit 491d9b97d51bc0d5ac81b5d2a402b66deafcde1f.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "types-arpeggio"
-version = "0.0.1a0"
+version = "0.0.1-dev"
 description = ""
 authors = ["ijknabla <ijknabla@gmail.com>"]
 readme = "README.md"
