--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 arpeggio = "1.3"
 
+
+[tool.poetry.group.lint.dependencies]
+mypy = "^1.4"
+pyproject-flake8 = "^5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
