--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "^3.7"
 
 [tool.poetry.group.dev.dependencies]
 arpeggio = "1.3"
+black = "^23"
+isort = "^5"
 
 
 [tool.poetry.group.lint.dependencies]
