--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ isort = "^5"
 mypy = "^1.4"
 pyproject-flake8 = "^5"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.2"
+pytest-cov = "^4.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
