--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ pytest-cov = "^4.1.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.coverage.run]
+omit = [
+    "*/arpeggio/tests/*"
+]
+
 [tool.black]
 line-length = 79
 
