--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,6 @@ exclude = '.venv,.git'
 [tool.isort]
 line_length = 79
 profile = "black"
+
+[tool.pytest.ini_options]
+addopts = "--cov=arpeggio --cov-branch --cov-report=term-missing"
